--- a/python/Python_Task_4.ipynb
+++ b/python/Python_Task_4.ipynb
@@ -324,6 +324,48 @@
     "    contact_book_app = ContactBook()\n",
     "    contact_book_app.main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5eb84faf-25ab-4d85-b0eb-c43426a0e82d",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Rectangle:\n",
+    "    def __init__(self, length, width):\n",
+    "        self.length = length\n",
+    "        self.width = width\n",
+    "   \n",
+    "    def calculate_area(self):\n",
+    "        return self.length * self.width\n",
+    "   \n",
+    "    def calculate_perimeter(self):\n",
+    "        return 2 * (self.length + self.width)\n",
+    "   \n",
+    "    def is_sq(self):\n",
+    "        return self.length == self.width\n",
+    " \n",
+    "length = int(input(\"Enter length of Rectangle: \"))\n",
+    "width = int(input(\"Enter width of Rectangle: \"))    \n",
+    "my_rect = Rectangle(length, width)\n",
+    " \n",
+    "print(\"area of rectangle is: \",my_rect.calculate_area())\n",
+    "print(\"perimeter of rectangle is: \",my_rect.calculate_perimeter())\n",
+    " \n",
+    "if my_rect.is_sq():\n",
+    "    print(\"yes\")\n",
+    " \n",
+    "else:\n",
+    "    print(\"no\")"
+   ]
   }
  ],
  "metadata": {
