--- a/PySpark_Task/PySpark Tasks Day2.ipynb
+++ b/PySpark_Task/PySpark Tasks Day2.ipynb
@@ -392,6 +392,193 @@
     }
    },
    "outputs": [],
+   "source": [
+    "w2 = Window.partitionBy(\"department\").orderBy(\"id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0e4351a7-b25b-4650-9264-afa443cff61a",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+------+----------+----+------+----------+---------------------------------------+\n| id|  name|       dob| age|salary|department|Sal_greater_or_=_departmentwise_avg_sal|\n+---+------+----------+----+------+----------+---------------------------------------+\n|  2| Alice|1997-02-28|  25| 90000|   Finance|                                  90000|\n|  4| Emily|1994-11-22|  28| 65000|   Finance|                                     -1|\n|  4| Emily|1994-11-22|  28| 65000|   Finance|                                     -1|\n|  4| Emily|1994-11-22|  28| 70000|   Finance|                                     -1|\n|  6| Susan|1989-07-05|  33| 75000|   Finance|                                  75000|\n| 10|Sophie|1992-06-30|  30| 62000|   Finance|                                     -1|\n|  2| Alice|1997-02-28|  25| 60000|        HR|                                  60000|\n|  2| Alice|1997-02-28|  25| 60000|        HR|                                  60000|\n|  5| David|1981-12-18|  41| 90000|        HR|                                  90000|\n|  8|  Lisa|1995-08-20|  27| 58000|        HR|                                     -1|\n|  1|  John|1992-05-12|  30| 70000|        IT|                                  70000|\n|  1|  John|1992-05-12|  30| 70000|        IT|                                  70000|\n|  1|  John|1992-05-12|  30| 70000|        IT|                                  70000|\n|  3|   Bob|      null|null| 80000|        IT|                                  80000|\n|  3|   Bob|      null|null| 80000|        IT|                                  80000|\n|  7|  Mike|1976-03-15|  46| 95000|        IT|                                  95000|\n|  9| James|1983-10-14|  39| 87000|        IT|                                  87000|\n+---+------+----------+----+------+----------+---------------------------------------+\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2 = df.withColumn(\n",
+    "    \"Sal_greater_or_=_departmentwise_avg_sal\",\n",
+    "    F.when(\n",
+    "        F.avg(\"salary\").over(w2) <= F.col(\"salary\"), \n",
+    "        F.col(\"salary\")\n",
+    "    ).otherwise(\n",
+    "        -1\n",
+    "    )   \n",
+    ").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "bd207721-7baf-48a9-a496-93a2cddfcc9d",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "source": [
+    "##### Calculate mean salary and check if it is greater or equal to the salary of all employees. boolean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f65ae0f4-d145-4062-a370-233b0e222e52",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "w3 = Window.orderBy(\"id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3e5a7e2b-07c9-4d99-89e1-30ac18c6ee83",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out[55]: '\\ndf3= df.withColumn(\\n    \"Sal_greater_or_equal_to_avgsalaryofallemployees\",\\n    F.avg(\\'salary\\').over(w3) <= F.col(\\'salary\\')   \\n).show()\\n'"
+     ]
+    }
+   ],
+   "source": [
+    "# not getting expected output from this\n",
+    "'''\n",
+    "df3= df.withColumn(\n",
+    "    \"Sal_greater_or_equal_to_avgsalaryofallemployees\",\n",
+    "    F.avg('salary').over(w3) <= F.col('salary')   \n",
+    ").show()\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5f12043f-8e43-4df5-b0ec-4ae12c69c5b6",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "73352.94117647059\n"
+     ]
+    }
+   ],
+   "source": [
+    "# caluculate mean sal\n",
+    "mean_sal = df.agg(F.avg(F.col(\"salary\"))).first()[0]\n",
+    "print(mean_sal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "65c3fdcb-3d3a-4c2f-b27e-11c30e592774",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+------+----------+----+------+----------+-----------------------------------------------+\n| id|  name|       dob| age|salary|department|Sal_greater_or_equal_to_avgsalaryofallemployees|\n+---+------+----------+----+------+----------+-----------------------------------------------+\n|  1|  John|1992-05-12|  30| 70000|        IT|                                          false|\n|  2| Alice|1997-02-28|  25| 60000|        HR|                                          false|\n|  3|   Bob|      null|null| 80000|        IT|                                           true|\n|  4| Emily|1994-11-22|  28| 65000|   Finance|                                          false|\n|  1|  John|1992-05-12|  30| 70000|        IT|                                          false|\n|  1|  John|1992-05-12|  30| 70000|        IT|                                          false|\n|  2| Alice|1997-02-28|  25| 60000|        HR|                                          false|\n|  2| Alice|1997-02-28|  25| 90000|   Finance|                                           true|\n|  3|   Bob|      null|null| 80000|        IT|                                           true|\n|  4| Emily|1994-11-22|  28| 65000|   Finance|                                          false|\n|  4| Emily|1994-11-22|  28| 70000|   Finance|                                          false|\n|  5| David|1981-12-18|  41| 90000|        HR|                                           true|\n|  6| Susan|1989-07-05|  33| 75000|   Finance|                                           true|\n|  7|  Mike|1976-03-15|  46| 95000|        IT|                                           true|\n|  8|  Lisa|1995-08-20|  27| 58000|        HR|                                          false|\n|  9| James|1983-10-14|  39| 87000|        IT|                                           true|\n| 10|Sophie|1992-06-30|  30| 62000|   Finance|                                          false|\n+---+------+----------+----+------+----------+-----------------------------------------------+\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "df3= df.withColumn(\n",
+    "    \"Sal_greater_or_equal_to_avgsalaryofallemployees\",\n",
+    "    mean_sal <= F.col('salary')    # return output in boolean\n",
+    ").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1c7f235a-e07b-4887-8e53-753b4ccea715",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
    "source": []
   }
  ],
@@ -402,7 +589,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "PySpark Tasks",
+   "notebookName": "PySpark Tasks Day2",
    "widgets": {}
   }
  },
