--- a/PySpark_Task/PySpark Tasks Day2.ipynb
+++ b/PySpark_Task/PySpark Tasks Day2.ipynb
@@ -237,7 +237,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Out[10]: '\\ndf_json = df_json.select(df_csv.columns)\\ndf_json.show()\\n'"
+      "Out[8]: '\\ndf_json = df_json.select(df_csv.columns)\\ndf_json.show()\\n'"
      ]
     }
    ],
@@ -311,27 +311,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "75bf10e7-0e9c-4142-9af7-7ac2ba32af36",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# create window object for duplicates\n",
-    "w = Window.partitionBy(df.columns).orderBy(\"id\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "2382c810-6835-49f7-9d49-0f177ae27a19",
      "showTitle": false,
      "title": ""
@@ -348,7 +327,8 @@
     }
    ],
    "source": [
-    "\n",
+    "# create window object for duplicates\n",
+    "w = Window.partitionBy(df.columns).orderBy(\"id\")\n",
     "df1 = df.withColumn(\n",
     "    \"is_duplicate\", \n",
     "    F.row_number().over(w) > 1   # First value = false , Duplicates = True\n",
@@ -437,7 +417,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "bd207721-7baf-48a9-a496-93a2cddfcc9d",
      "showTitle": false,
@@ -465,7 +448,8 @@
    },
    "outputs": [],
    "source": [
-    "w3 = Window.orderBy(\"id\")"
+    "# w = Window.orderBy('id') \n",
+    "#  creates a window object that orders rows within the window partition by the id column "
    ]
   },
   {
@@ -489,23 +473,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Out[55]: '\\ndf3= df.withColumn(\\n    \"Sal_greater_or_equal_to_avgsalaryofallemployees\",\\n    F.avg(\\'salary\\').over(w3) <= F.col(\\'salary\\')   \\n).show()\\n'"
+      "+---+------+----------+----+------+----------+-----------------------------------------------+\n| id|  name|       dob| age|salary|department|Sal_greater_or_equal_to_avgsalaryofallemployees|\n+---+------+----------+----+------+----------+-----------------------------------------------+\n|  1|  John|1992-05-12|  30| 70000|        IT|                                          false|\n|  2| Alice|1997-02-28|  25| 60000|        HR|                                          false|\n|  3|   Bob|      null|null| 80000|        IT|                                           true|\n|  4| Emily|1994-11-22|  28| 65000|   Finance|                                          false|\n|  1|  John|1992-05-12|  30| 70000|        IT|                                          false|\n|  1|  John|1992-05-12|  30| 70000|        IT|                                          false|\n|  2| Alice|1997-02-28|  25| 60000|        HR|                                          false|\n|  2| Alice|1997-02-28|  25| 90000|   Finance|                                           true|\n|  3|   Bob|      null|null| 80000|        IT|                                           true|\n|  4| Emily|1994-11-22|  28| 65000|   Finance|                                          false|\n|  4| Emily|1994-11-22|  28| 70000|   Finance|                                          false|\n|  5| David|1981-12-18|  41| 90000|        HR|                                           true|\n|  6| Susan|1989-07-05|  33| 75000|   Finance|                                           true|\n|  7|  Mike|1976-03-15|  46| 95000|        IT|                                           true|\n|  8|  Lisa|1995-08-20|  27| 58000|        HR|                                          false|\n|  9| James|1983-10-14|  39| 87000|        IT|                                           true|\n| 10|Sophie|1992-06-30|  30| 62000|   Finance|                                          false|\n+---+------+----------+----+------+----------+-----------------------------------------------+\n\n"
      ]
     }
    ],
    "source": [
-    "# not getting expected output from this\n",
-    "'''\n",
-    "df3= df.withColumn(\n",
+    "w3 = Window.partitionBy()     # or Window.orderBy()  ||  passing any column in orderBy will change the output\n",
+    "df.withColumn(\n",
     "    \"Sal_greater_or_equal_to_avgsalaryofallemployees\",\n",
-    "    F.avg('salary').over(w3) <= F.col('salary')   \n",
-    ").show()\n",
-    "'''"
+    "    F.avg('salary').over(w3)   <= F.col('salary')\n",
+    ").show()\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -518,20 +499,8 @@
      "title": ""
     }
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "73352.94117647059\n"
-     ]
-    }
-   ],
    "source": [
-    "# caluculate mean sal\n",
-    "mean_sal = df.agg(F.avg(F.col(\"salary\"))).first()[0]\n",
-    "print(mean_sal)"
+    "######OR"
    ]
   },
   {
@@ -555,15 +524,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+------+----------+----+------+----------+-----------------------------------------------+\n| id|  name|       dob| age|salary|department|Sal_greater_or_equal_to_avgsalaryofallemployees|\n+---+------+----------+----+------+----------+-----------------------------------------------+\n|  1|  John|1992-05-12|  30| 70000|        IT|                                          false|\n|  2| Alice|1997-02-28|  25| 60000|        HR|                                          false|\n|  3|   Bob|      null|null| 80000|        IT|                                           true|\n|  4| Emily|1994-11-22|  28| 65000|   Finance|                                          false|\n|  1|  John|1992-05-12|  30| 70000|        IT|                                          false|\n|  1|  John|1992-05-12|  30| 70000|        IT|                                          false|\n|  2| Alice|1997-02-28|  25| 60000|        HR|                                          false|\n|  2| Alice|1997-02-28|  25| 90000|   Finance|                                           true|\n|  3|   Bob|      null|null| 80000|        IT|                                           true|\n|  4| Emily|1994-11-22|  28| 65000|   Finance|                                          false|\n|  4| Emily|1994-11-22|  28| 70000|   Finance|                                          false|\n|  5| David|1981-12-18|  41| 90000|        HR|                                           true|\n|  6| Susan|1989-07-05|  33| 75000|   Finance|                                           true|\n|  7|  Mike|1976-03-15|  46| 95000|        IT|                                           true|\n|  8|  Lisa|1995-08-20|  27| 58000|        HR|                                          false|\n|  9| James|1983-10-14|  39| 87000|        IT|                                           true|\n| 10|Sophie|1992-06-30|  30| 62000|   Finance|                                          false|\n+---+------+----------+----+------+----------+-----------------------------------------------+\n\n"
+      "73352.94117647059\n+---+------+----------+----+------+----------+-----------------------------------------------+\n| id|  name|       dob| age|salary|department|Sal_greater_or_equal_to_avgsalaryofallemployees|\n+---+------+----------+----+------+----------+-----------------------------------------------+\n|  1|  John|1992-05-12|  30| 70000|        IT|                                          false|\n|  2| Alice|1997-02-28|  25| 60000|        HR|                                          false|\n|  3|   Bob|      null|null| 80000|        IT|                                           true|\n|  4| Emily|1994-11-22|  28| 65000|   Finance|                                          false|\n|  1|  John|1992-05-12|  30| 70000|        IT|                                          false|\n|  1|  John|1992-05-12|  30| 70000|        IT|                                          false|\n|  2| Alice|1997-02-28|  25| 60000|        HR|                                          false|\n|  2| Alice|1997-02-28|  25| 90000|   Finance|                                           true|\n|  3|   Bob|      null|null| 80000|        IT|                                           true|\n|  4| Emily|1994-11-22|  28| 65000|   Finance|                                          false|\n|  4| Emily|1994-11-22|  28| 70000|   Finance|                                          false|\n|  5| David|1981-12-18|  41| 90000|        HR|                                           true|\n|  6| Susan|1989-07-05|  33| 75000|   Finance|                                           true|\n|  7|  Mike|1976-03-15|  46| 95000|        IT|                                           true|\n|  8|  Lisa|1995-08-20|  27| 58000|        HR|                                          false|\n|  9| James|1983-10-14|  39| 87000|        IT|                                           true|\n| 10|Sophie|1992-06-30|  30| 62000|   Finance|                                          false|\n+---+------+----------+----+------+----------+-----------------------------------------------+\n\n"
      ]
     }
    ],
    "source": [
+    "# caluculate mean sal\n",
+    "mean_sal = df.agg(F.avg(F.col(\"salary\"))).first()[0]\n",
+    "print(mean_sal)\n",
+    "\n",
     "df3= df.withColumn(\n",
     "    \"Sal_greater_or_equal_to_avgsalaryofallemployees\",\n",
     "    mean_sal <= F.col('salary')    # return output in boolean\n",
-    ").show()"
+    ")\n",
+    "df3.show()"
    ]
   },
   {
@@ -571,7 +545,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1c7f235a-e07b-4887-8e53-753b4ccea715",
      "showTitle": false,
