--- a/pyspark/PySpark Tasks.ipynb
+++ b/pyspark/PySpark Tasks.ipynb
@@ -21,7 +21,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Out[45]: False"
+      "Out[2]: False"
      ]
     }
    ],
@@ -56,7 +56,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"/?o=2342463238466600#setting/sparkui/0212-113811-q776l1cq/driver-8918646840567239898\">Spark UI</a></p>\n",
+       "            <p><a href=\"/?o=2342463238466600#setting/sparkui/0213-044427-wwyq4l92/driver-4681814273899057300\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -76,7 +76,7 @@
       "application/vnd.databricks.v1+output": {
        "addedWidgets": {},
        "arguments": {},
-       "data": "\n            <div>\n                <p><b>SparkSession - hive</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"/?o=2342463238466600#setting/sparkui/0212-113811-q776l1cq/driver-8918646840567239898\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.3.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[8]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>Databricks Shell</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        ",
+       "data": "\n            <div>\n                <p><b>SparkSession - hive</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"/?o=2342463238466600#setting/sparkui/0213-044427-wwyq4l92/driver-4681814273899057300\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.3.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[8]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>Databricks Shell</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        ",
        "datasetInfos": [],
        "metadata": {},
        "removedWidgets": [],
@@ -596,8 +596,7 @@
    },
    "source": [
     "PySpark Task - 2 :  \n",
-    "Calculate mean salary and check if it is greater or equal to the salary of employees in each department.      \n",
-    "Calculate mean salary and check if it is greater or equal to the salary of all employees "
+    "A. Calculate mean salary and check if it is greater or equal to the salary of employees in each department.      "
    ]
   },
   {
@@ -662,23 +661,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "92b23a26-aa2d-4bdb-87a9-30ec8aadff58",
+     "nuid": "96715496-7045-484b-8720-503e6967b963",
      "showTitle": false,
      "title": ""
     }
    },
-   "outputs": [],
    "source": [
-    "mean_sal = df.select(f.avg(\"salary\")).first()[0]"
+    "PySpark Task - 2 :  \n",
+    "B. Calculate mean salary and check if it is greater or equal to the salary of all employees "
    ]
   },
   {
@@ -691,7 +686,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "460cd8f5-8a0f-4fa0-9b10-b8ad95cb7bc9",
+     "nuid": "8fdcc4b4-286d-48f2-acdd-8dd3282d68cb",
      "showTitle": false,
      "title": ""
     }
@@ -702,15 +697,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+------+----------+----+------+----------+-----------+\n| id|  name|       dob| age|salary|department|mean_salary|\n+---+------+----------+----+------+----------+-----------+\n|  1|  John|1992-05-12|  30| 70000|        IT|      false|\n|  2| Alice|1997-02-28|  25| 60000|        HR|      false|\n|  3|   Bob|      null|null| 80000|        IT|       true|\n|  4| Emily|1994-11-22|  28| 65000|   Finance|      false|\n|  1|  John|1992-05-12|  30| 70000|        IT|      false|\n|  2| Alice|1997-02-28|  25| 60000|        HR|      false|\n|  3|   Bob|      null|null| 80000|        IT|       true|\n|  4| Emily|1994-11-22|  28| 65000|   Finance|      false|\n|  5| David|1981-12-18|  41| 90000|        HR|       true|\n|  6| Susan|1989-07-05|  33| 75000|   Finance|       true|\n|  7|  Mike|1976-03-15|  46| 95000|        IT|       true|\n| 10|Sophie|1992-06-30|  30| 62000|   Finance|      false|\n|  2| Alice|1997-02-28|  25| 90000|   Finance|       true|\n|  4| Emily|1994-11-22|  28| 70000|   Finance|      false|\n|  9| James|1983-10-14|  39| 87000|        IT|       true|\n|  1|  John|1992-05-12|  30| 70000|        IT|      false|\n|  8|  Lisa|1995-08-20|  27| 58000|        HR|      false|\n+---+------+----------+----+------+----------+-----------+\n\n"
+      "+---+------+----------+----+------+----------+-----------+\n| id|  name|       dob| age|salary|department|mean_salary|\n+---+------+----------+----+------+----------+-----------+\n|  1|  John|1992-05-12|  30| 70000|        IT|       true|\n|  2| Alice|1997-02-28|  25| 60000|        HR|       true|\n|  3|   Bob|      null|null| 80000|        IT|      false|\n|  4| Emily|1994-11-22|  28| 65000|   Finance|       true|\n|  1|  John|1992-05-12|  30| 70000|        IT|       true|\n|  2| Alice|1997-02-28|  25| 60000|        HR|       true|\n|  3|   Bob|      null|null| 80000|        IT|      false|\n|  4| Emily|1994-11-22|  28| 65000|   Finance|       true|\n|  5| David|1981-12-18|  41| 90000|        HR|      false|\n|  6| Susan|1989-07-05|  33| 75000|   Finance|      false|\n|  7|  Mike|1976-03-15|  46| 95000|        IT|      false|\n| 10|Sophie|1992-06-30|  30| 62000|   Finance|       true|\n|  2| Alice|1997-02-28|  25| 90000|   Finance|      false|\n|  4| Emily|1994-11-22|  28| 70000|   Finance|       true|\n|  9| James|1983-10-14|  39| 87000|        IT|      false|\n|  1|  John|1992-05-12|  30| 70000|        IT|       true|\n|  8|  Lisa|1995-08-20|  27| 58000|        HR|       true|\n+---+------+----------+----+------+----------+-----------+\n\n"
      ]
     }
    ],
    "source": [
     "df.withColumn(\n",
     "    \"mean_salary\",\n",
-    "    mean_sal <= df.salary\n",
-    ").show()"
+    "    (f.avg(\"salary\").over(Window.partitionBy()) > df.salary\n",
+    ")).show()"
    ]
   },
   {
@@ -720,7 +715,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "8fdcc4b4-286d-48f2-acdd-8dd3282d68cb",
+     "nuid": "c34b5e1c-d971-4374-b979-60536da05105",
      "showTitle": false,
      "title": ""
     }
