AWS CLoud Badge

--- a/Python/bootcampTask2Python.ipynb
+++ b/Python/bootcampTask2Python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -17,11 +17,12 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['name:John', 'age:34', 'city:New York']\n{'name': 'John', 'age': '34', 'city': 'New York'}\n<class 'dict'>\n"
+      "['name:John', 'age:34', 'city:New York']\n",
+      "{'name': 'John', 'age': '34', 'city': 'New York'}\n",
+      "<class 'dict'>\n"
      ]
     }
    ],
@@ -37,12 +38,13 @@
     "  my_dict[key] = value\n",
     "\n",
     "print(my_dict)\n",
-    "print(type(my_dict))\n"
+    "print(type(my_dict))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -57,11 +59,12 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The original text is: name:John,age:34,city:New York\n{'name': 'John', 'age': '34', 'city': 'New York'}\n<class 'dict'>\n"
+      "The original text is: name:John,age:34,city:New York\n",
+      "{'name': 'John', 'age': '34', 'city': 'New York'}\n",
+      "<class 'dict'>\n"
      ]
     }
    ],
@@ -78,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -93,11 +96,12 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['The Great Gatsby, F. Scott Fitzgerald, 1925 ', ' To Kill a Mockingbird, Harper Lee, 1960 ', ' 1984, George Orwell, 1949']\n{'The Great Gatsby': {'Author': ' F. Scott Fitzgerald', 'Year of Publication': ' 1925 '}, ' To Kill a Mockingbird': {'Author': ' Harper Lee', 'Year of Publication': ' 1960 '}, ' 1984': {'Author': ' George Orwell', 'Year of Publication': ' 1949'}}\n<class 'dict'>\n"
+      "['The Great Gatsby, F. Scott Fitzgerald, 1925 ', ' To Kill a Mockingbird, Harper Lee, 1960 ', ' 1984, George Orwell, 1949']\n",
+      "{'The Great Gatsby': {'Author': ' F. Scott Fitzgerald', 'Year of Publication': ' 1925 '}, ' To Kill a Mockingbird': {'Author': ' Harper Lee', 'Year of Publication': ' 1960 '}, ' 1984': {'Author': ' George Orwell', 'Year of Publication': ' 1949'}}\n",
+      "<class 'dict'>\n"
      ]
     }
    ],
@@ -119,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -134,11 +138,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Alice': 'A', 'Bob': 'B', 'Charlie': 'C'}\n<class 'dict'>\n"
+      "{'Alice': 'A', 'Bob': 'B', 'Charlie': 'C'}\n",
+      "<class 'dict'>\n"
      ]
     }
    ],
@@ -159,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -174,11 +178,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original stock:{'apples': 10, 'oranges': 8, 'bananas': 6}\n{'apples': 8, 'oranges': 7, 'bananas': 5}\n"
+      "Original stock:{'apples': 10, 'oranges': 8, 'bananas': 6}\n",
+      "{'apples': 8, 'oranges': 7, 'bananas': 5}\n"
      ]
     }
    ],
@@ -200,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -215,7 +219,6 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -246,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -261,11 +264,14 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total questions:2\n['How are you?', 'Have you seen my notebook?']\nHello How are you I hope youre enjoying your day Have you seen my notebook Its important Thanks for your help\nCount of 'you':3\nHello! Thanks for your help!\n"
+      "Total questions:2\n",
+      "['How are you?', 'Have you seen my notebook?']\n",
+      "Hello How are you I hope youre enjoying your day Have you seen my notebook Its important Thanks for your help\n",
+      "Count of 'you':3\n",
+      "Hello! Thanks for your help!\n"
      ]
     }
    ],
@@ -310,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -333,6 +339,9 @@
    },
    "notebookName": "bootcampTask2Python",
    "widgets": {}
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
