Healthcare task added

--- a/healthcare 101 TASK/health 101.ipynb
+++ b/healthcare 101 TASK/health 101.ipynb
@@ -3428,7 +3428,7 @@
        "    line-height: 19px;\n",
        "  }\n",
        "</style>\n",
-       "<div class=\"ansiout\">res1: Boolean = false\n",
+       "<div class=\"ansiout\">res2: Boolean = true\n",
        "</div>"
       ]
      },
@@ -3436,7 +3436,7 @@
       "application/vnd.databricks.v1+output": {
        "addedWidgets": {},
        "arguments": {},
-       "data": "<div class=\"ansiout\">res1: Boolean = false\n</div>",
+       "data": "<div class=\"ansiout\">res2: Boolean = true\n</div>",
        "datasetInfos": [],
        "metadata": {
         "isDbfsCommandResult": false
@@ -3723,9 +3723,9 @@
     "        demo.Employee_ID,\n",
     "        row_number() OVER (ORDER BY(null)),\n",
     "        case\n",
-    "            when demo.GENDER = 1 then 'Male'\n",
-    "            when demo.GENDER = 2 then 'Unknown'\n",
-    "            when demo.GENDER = 0 then 'Female'\n",
+    "            when demo.GENDER = 1 then '1'\n",
+    "            when demo.GENDER = 2 then '2'\n",
+    "            when demo.GENDER = 0 then '0'\n",
     "        END,\n",
     "        REPLACE(demo.DOB,\"-\",\" \")\n",
     "    ) AS Abacus_Member_ID,\n",
@@ -3734,11 +3734,12 @@
     "    demo.FIRST_NAME as Member_First_Name,\n",
     "    demo.LAST_NAME as Member_Last_Name,\n",
     "    demo.MIDDLE_NAME as Member_Middle_Name,\n",
-    "    CASE\n",
-    "        WHEN gen.Rollup_Description = \"Male\" THEN \"Mr.\"\n",
-    "        WHEN gen.Rollup_Description = \"Female\" THEN \"Mrs.\"\n",
-    "        ELSE \"Unknown\"\n",
-    "    END AS Member_Prefix_Name,\n",
+    "    -- CASE\n",
+    "        -- WHEN gen.Rollup_Description = \"Male\" THEN \"Mr.\"\n",
+    "        -- WHEN gen.Rollup_Description = \"Female\" THEN \"Mrs.\"\n",
+    "        -- ELSE \"Unknown\"\n",
+    "    -- END AS Member_Prefix_Name,\n",
+    "    NULL AS Member_Prefix_Name,\n",
     "    NULL AS Member_Suffix_Name,\n",
     "    gen.Rollup_Description AS Member_Gender,\n",
     "    demo.DOB AS Member_Date_of_Birth,\n",
@@ -11609,7 +11610,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 1121050659067988,
+     "commandId": 2855693757185845,
      "dataframes": [
       "_sqldf"
      ]
